<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:label="@string/current_travel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.User.CurrentTravel">

    <Button
        android:id="@+id/buttonShowLiveView"
        android:layout_width="245dp"
        android:layout_height="68dp"
        android:background="@drawable/round_corners"
        android:onClick="showLiveView"
        android:text="@string/live_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:background="@drawable/round_corners"
        android:id="@+id/buttonShowLiveMap"
        android:layout_width="245dp"
        android:layout_height="68dp"
        android:onClick="showLiveMap"
        android:text="@string/live_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />


</androidx.constraintlayout.widget.ConstraintLayout>